vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__access_type_definition.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "to_test_text(Parser::type_declaration, \"type str_ptr_t is access string;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'str_ptr_t'
  Keyword(Is)
  AccessTypeDefinition
    Keyword(Access)
    SubtypeIndication
      Name
        NameDesignatorPrefix
          Identifier 'string'
  SemiColon
