vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__file_type_declaration.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "to_test_text(Parser::type_declaration, \"type IntegerFile is file of integer;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'IntegerFile'
  Keyword(Is)
  FileTypeDefinition
    Keyword(File)
    Keyword(Of)
    Name
      NameDesignatorPrefix
        Identifier 'integer'
  SemiColon
