vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__incomplete_type_declaration.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "to_test_text(Parser::type_declaration, \"type incomplete_type;\")"
---
IncompleteTypeDeclaration
  Keyword(Type)
  Identifier 'incomplete_type'
  SemiColon
