vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__parse_subtype_declaration.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "to_test_text(Parser::subtype_declaration,\n\"subtype vec_t is integer_vector(2-1 downto 0);\")"
---
SubtypeDeclaration
  Keyword(Subtype)
  Identifier 'vec_t'
  Keyword(Is)
  SubtypeIndication
    Name
      Identifier 'integer_vector'
      ParenthesizedName
        LeftPar
        AssociationList
          AssociationElement
            ActualPart
              ActualPartExpression
                BinaryExpression
                  BinaryExpression
                    LiteralExpression
                      AbstractLiteral '2'
                    Minus
                    LiteralExpression
                      AbstractLiteral '1'
                  Keyword(Downto)
                  LiteralExpression
                    AbstractLiteral '0'
        RightPar
  SemiColon
