vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__protected_type_body-3.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "to_test_text(Parser::type_declaration,\n\"\\\ntype foo is protected body\n  variable foo : natural;\n  procedure proc is\n  begin\n  end;\nend protected body;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'foo'
  Keyword(Is)
  ProtectedTypeBody
    ProtectedTypeBodyPreamble
      Keyword(Protected)
      Keyword(Body)
    Declarations
      VariableDeclaration
        Keyword(Variable)
        IdentifierList
          Identifier 'foo'
        Colon
        SubtypeIndication
          Name
            NameDesignatorPrefix
              Identifier 'natural'
        SemiColon
      SubprogramBody
        SubprogramBodyPreamble
          ProcedureSpecification
            Keyword(Procedure)
            Identifier 'proc'
          Keyword(Is)
        DeclarationStatementSeparator
          Keyword(Begin)
        SubprogramBodyEpilogue
          Keyword(End)
          SemiColon
    ProtectedTypeBodyEpilogue
      Keyword(End)
      Keyword(Protected)
      Keyword(Body)
  SemiColon
