vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__protected_type_body.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "to_test_text(Parser::type_declaration,\n\"type p_t is protected body end protected body;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'p_t'
  Keyword(Is)
  ProtectedTypeBody
    ProtectedTypeBodyPreamble
      Keyword(Protected)
      Keyword(Body)
    ProtectedTypeBodyEpilogue
      Keyword(End)
      Keyword(Protected)
      Keyword(Body)
  SemiColon
