vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__protected_type_declaration-2.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "to_test_text(Parser::type_declaration,\n\"type p_t is protected end protected p_t;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'p_t'
  Keyword(Is)
  ProtectedTypeDeclaration
    ProtectedPreamble
      Keyword(Protected)
    ProtectedTypeDeclarationEpilogue
      Keyword(End)
      Keyword(Protected)
      Identifier 'p_t'
  SemiColon
