vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__subtype_missing_indication.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
subtype small_int is ;

== tree ==
SubtypeDeclaration
  Keyword(Subtype)
  Identifier 'small_int'
  Keyword(Is)
  SemiColon

== diagnostics ==
1:21 expected SubtypeIndication
